# minimind

./: .gitignore  pyproject.toml
