[project]
name = "minimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "datasketch>=1.6.5",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "jieba>=0.42.1",
    "jinja2>=3.1.5",
    "jsonlines>=4.0.0",
    "marshmallow>=3.25.1",
    "matplotlib>=3.10.0",
    "ngrok>=1.4.0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "openai>=1.59.9",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "psutil>=6.1.1",
    "pydantic>=2.10.5",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.3.1",
    "simhash>=2.1.2",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "trl>=0.13.0",
    "ujson>=5.10.0",
    "wandb>=0.19.4",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
